@@ -25,12 +25,15 @@ Core and Builtins
 Extension Modules
 -----------------
 
-- Support for Windows9x has been removed from the winsound module.
+- Support for Windows 9x has been removed from the winsound module.
 
 - bsddb module updated to version 4.6.4.
 
 Library
 -------
+
+- The DEVICE, GL, gl, and cgen modules (which indirectly includes cgensupport)
+  have been deprecated for removal in Python 3.0.
 
 - The ConfigParser module has been renamed 'configparser'.  The old
   name is now deprecated.
